--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
+.box {
+	width: 300px;
+	background-color: lightblue;
+	border: 15px solid blue;
+	padding: 50px;
+	margin: 20px;
+	color: black;
+	text-align: center;
+}
 /* Your CSS Code here. */
